Agregando el connection string.

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,15 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+
+  "ConnectionStrings": {
+    "SqlConStr": "Server=DatabaseLuisAplicada.mssql.somee.com;packet size=4096;user id=LuisAngelGabriel_SQLLogin_1;pwd=9y3ujkljjm;data source=DatabaseLuisAplicada.mssql.somee.com;persist security info=False;initial catalog=DatabaseLuisAplicada;TrustServerCertificate=True"
+
   },
-  "AllowedHosts": "*"
-}
+
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "AllowedHosts": "*"
+  }
